add subtitle and paragraph

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1>Hello World!</h1>
     <h2>test n° 2</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quas rem dolor nulla fugit ducimus
+        voluptatum soluta, ex assumenda nostrum unde similique iste aliquam modi quia eaque fuga iusto aperiam?</p>
 </body>
 
 </html>
